# backtester

./: CMakeLists.txt  plan.md  requirements.txt
src/: main.cpp
src/core/: data.cpp  data.h  execution.cpp  execution.h  portfolio.cpp  portfolio.h
src/output/: AAPL  AMZN  NVDA  TSLA
src/python/: ingest.py  starter.ipynb
src/tests/: test_event_execution.cpp  test_portfolio.cpp
